<resources>
    <string name="app_name">Playground</string>
    <string name="title_activity_recycler_demo">RecyclerDemo</string>
    <string name="action_settings">Settings</string>
    <string name="recyclerviewdemo">RecyclerViewDemo</string>
    <string name="sweetalert">SweetAlert</string>
    <string name="action_delete">删除</string>
    <string name="btn_recyclerviewdemo">RecyclerViewDemo</string>
    <string name="btn_pringview">PringView</string>
    <string name="title_activity_demo1">Demo1Activity</string>
    <string name="title_activity_login">Login</string>
    <string name="auth_hint_email">Email</string>
    <string name="auth_hint_pwd">Password</string>
    <string name="auth_login_btn_txt">Login</string>
    <string name="auth_go_reg">No account yet? Create one</string>
    <string name="logo">Logo</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="hint_name">Name</string>
    <string name="auth_signup_btn">Create Account</string>
    <string name="auth_go_login">Already a member? Login</string>
    <string name="menu_login">Login</string>
    <string name="menu_bubble">Bubble</string>
    <string name="flash_logo_desc">Flash logo</string>
    <string name="welcome_msg">欢迎使用</string>
</resources>
