<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    tools:context="lzuer.net.playground.ui.auth.SignupActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_login_padding_top"
        android:paddingLeft="@dimen/size_24"
        android:paddingRight="@dimen/size_24">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_logo_height"
            android:layout_marginBottom="@dimen/size_24"
            android:layout_gravity="center_horizontal"/>

        <!--  Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/auth_control_margin"
            android:layout_marginBottom="@dimen/auth_control_margin">
            <EditText android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/hint_name" />
        </android.support.design.widget.TextInputLayout>

        <!-- email label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/auth_control_margin"
            android:layout_marginBottom="@dimen/auth_control_margin">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/auth_hint_email"/>
        </android.support.design.widget.TextInputLayout>

        <!-- password label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/auth_control_margin"
            android:layout_marginBottom="@dimen/auth_control_margin">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/auth_hint_pwd"/>
        </android.support.design.widget.TextInputLayout>

        <!--Button-->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_24"
            android:layout_marginBottom="@dimen/size_24"
            android:padding="@dimen/size_12"
            android:text="@string/auth_signup_btn"/>

        <TextView android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_24"
            android:text="@string/auth_go_login"
            android:gravity="center"
            android:textSize="@dimen/auth_tip_txt_size"/>

    </LinearLayout>

</ScrollView>
